Code improvements due to FindBugs.