@@ -11,7 +11,6 @@ import org.testng.Assert;
 import com.yahoo.sketches.Family;
 import com.yahoo.sketches.SketchesArgumentException;
 import com.yahoo.sketches.memory.NativeMemory;
-import edu.umd.cs.findbugs.annotations.SuppressFBWarnings;
 
 public class SerializerDeserializerTest {
 
@@ -29,15 +28,15 @@ public class SerializerDeserializerTest {
     SerializerDeserializer.getSketchType(new NativeMemory(bytes));
   }
 
-  @SuppressFBWarnings("NP_NULL_PARAM_DEREF_NONVIRTUAL")
   @Test(expectedExceptions = RuntimeException.class)
   public void deserializeFromMemoryUsupportedClass() {
-    SerializerDeserializer.deserializeFromMemory(null, 0, "bogus");
+    NativeMemory mem = null;
+    SerializerDeserializer.deserializeFromMemory(mem, 0, "bogus");
   }
 
   @Test(expectedExceptions = RuntimeException.class)
   public void toByteArrayUnsupportedObject() {
-    SerializerDeserializer.toByteArray(new Integer(0));
+    SerializerDeserializer.toByteArray(Integer.valueOf(0));
   }
 
   @Test(expectedExceptions = SketchesArgumentException.class)
